--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,5 +30,5 @@ jobs:
 
       - id: build-push-image
         name: Build and Push netbox docker image
-        run: ./build.sh
+        run: ./build.sh --push
         shell: bash
