feat: introduce bash script for deployment testing - script: spin up docker compose, wait for health check - script: test list of plugins from configuration against what the API reports - env: introduce netbox_version.env file to track the netbox version (for renovate), had to be moved to separate file that variable needs to be used by both the build.sh and test.sh - adjust renovate config to check the newly introduced nautobot_version.env file instead

--- a/renovate.json5
+++ b/renovate.json5
@@ -7,7 +7,7 @@
     {
       customType: 'regex',
       managerFilePatterns: [
-        'build.sh'
+        'netbox_version.env'
       ],
       matchStrings: [
         '# renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)( versioning=(?<versioning>.*?))?\\s\\S+=(?<currentValue>\\S+)',
